lambda/lambda_security_group.tf
# lambda
resource "aws_security_group" "lambda_sg" {
    vpc_id = aws_vpc.example_vpc.id

    ingress {
        from_port = 0
        to_port = 0
        protocol = 0
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = [ "0.0.0.0/0" ]
    }
}
